data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4104.wast
;; 3. **Test Description**:    Define a function with multiple parameters but call it using `call_indirect` with insufficient arguments on the stack. Ensure the caller function has an `unreachable` instruction at the end.    - **Constraint Checked**: Operand stack conformity.    - **Relation to Unreachable Code Execution**: The check for insufficient arguments should trap, bypassing the `unreachable` instruction.

(assert_invalid
  (module
    (type (func (param i32 i32) (result i32)))
    (func $callee (type 0) (param i32 i32) (result i32)
      local.get 0
      local.get 1
      i32.add
    )
    (table 1 funcref)
    (elem (i32.const 0) $callee)
    (func $caller (result i32)
      (call_indirect (type 0) (i32.const 0) (i32.const 10))
      unreachable
    )
  )
  "type mismatch"
)